# Victor

./: .gitignore  AGENTS.md  LOCAL_MODEL_DEPLOY_PLAN.md  Modelfile  README.md  package-lock.json  package.json
apps/desktop/: README.md
apps/desktop/frontend/: index.html  main.js  styles.css
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
docs/: README.md
docs/plans/: LOCAL_MODEL_DEPLOY_PLAN.md  PERSONAL_AGENT_PLAN.md
evals/: coding.jsonl  general_chat.jsonl  git_workflow.jsonl  linux_gpu_debug.jsonl  local_model_deploy.jsonl  reasoning.jsonl  user_workstation.jsonl
memory/: benchmarks.md  facts.md  machine.md  preferences.md  projects.md
modes/: code-review.Modelfile  daily.Modelfile  debug.Modelfile  deployment.Modelfile  reasoning.Modelfile
profiles/: deepseek-r1-8b.env  hermes3-8b.env  laptop-8gb-thinking.env  laptop-8gb.env  low-vram.env  qwen3.5-4b.env  qwen3.5-9b.env  workstation-24gb.env
runs/: 2026-06-01-qwen3.5-9b.md
scripts/: benchmark.sh  common.sh  create_victor.sh  install_ollama.sh  pull_model.sh  test_api.sh
src/: agent_chat.ts  chat.ts  victor_lib.ts  web_chat.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js  styles.css
