[package]
name = "victor-desktop"
version = "0.1.0"
description = "Victor local assistant desktop app"
authors = ["user"]
edition = "2021"

[lib]
name = "victor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
